make-a-wish-salesforce/src/objects/VisualAntidote__Alert_Template__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-hoc</fullName>
                    <default>true</default>
                    <label>Ad-hoc</label>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisualAntidote__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Subject__c</fullName>
        <label>Subject</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Alert Template</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>VisualAntidote__Category__c</columns>
        <columns>VisualAntidote__Name__c</columns>
        <columns>VisualAntidote__Subject__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>VisualAntidote__All1</fullName>
        <columns>NAME</columns>
        <columns>VisualAntidote__Body__c</columns>
        <columns>VisualAntidote__Category__c</columns>
        <columns>VisualAntidote__Name__c</columns>
        <columns>VisualAntidote__Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FT-{00000}</displayFormat>
        <label>Template Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>